Version 1.13.5+dev:
 * Music and sound effects:
   * Added a preference to pause the music when the game loses focus.
 * Units:
   * Changed the sound for the melee attack of the
     Loyalist Bowman, Orcish Crossbowman and Orcish Slurbow.
 * User Interface:
   * Trait descriptions in the help are now generated. (This makes user-defined
     traits show up in the help as well.)
   * Fix game map sometimes showing and buttons sometimes not rendered properly in story screen (bug #24553)
 * WML Engine:
   * New attributes for [role]:
     - search_recall_list=yes|no|only(default yes) controls where to look
     - reassign=yes|no(default yes) if no, check for a unit and do not assign to another
     - [auto_recall] sub-tag, if assigned to recall list, gives [recall] attributes (no SUF)
     - [else] sub-tag, WML to execute if no unit found for the role
   * New help_text= key for [trait] to set the description displayed in the help.
   * Added tag id= [fire_event], which allows raising events by id
   * [modify_unit] now understands [effect] tags, which it applies directly.
     This replaces the use of [object] with no_write=yes (which will be removed
     in the next release).
   * Add [object]take_only_once=yes|no (default yes) - if set to no, automatic
     tracking is disabled for this object (allowing it to be taken multiple times
     even if it has an id).
   * New [remove_object] tag which removes applied [object]s from matched units;
     it can filter on the entire [object] WML. The most efficient use is to
     remove all objects with a specific duration value.
   * Renamed [foreach] variable= to array=
   * Renamed [foreach] item_var= to variable=
   * Fixed several bugs in the name generation of the map generator
* Lua API:
   * Added new functions wesnoth.fire_event_by_id and fire_event_by_name. The old
     function wesnoth.fire_event is now an alias for wesnoth.fire_event_by_name