@@ -5,15 +5,16 @@ changelog: https://github.com/wesnoth/wesnoth/blob/master/changelog
 Version 1.13.5+dev:
  * Music and sound effects:
    * Added a preference to pause the music when the game loses focus.
+   * Now the storyscreen music fades out at the start of each scenario.
  * Units:
    * Changed the sound for the melee attack of the
 	 Loyalist Bowman, Orcish Crossbowman and Orcish Slurbow.
  * Performance:
-  * When a heuristic determines that it's probably faster, the game predicts battle
-    outcome by simulating a few thousand fights instead of calculating exact
-    probabilities. This method is inexact, but in very complex battles (extremely
-    high HP, drain, slow, berserk, etc.) it's significantly faster than the default
-    damage calculation method.
+   * When a heuristic determines that it's probably faster, the game predicts battle
+     outcome by simulating a few thousand fights instead of calculating exact
+     probabilities. This method is inexact, but in very complex battles (extremely
+     high HP, drain, slow, berserk, etc.) it's significantly faster than the default
+     damage calculation method.
 
 Version 1.13.5:
  * Campaigns:
